--- a/studybuilder/Dockerfile
+++ b/studybuilder/Dockerfile
@@ -1,5 +1,5 @@
-ARG NGINX_IMAGE=nginx:alpine
-ARG NODE_IMAGE=node:lts-alpine
+ARG NGINX_IMAGE=nginx:1.27.1-alpine3.20-slim
+ARG NODE_IMAGE=node:lts-alpine3.20
 
 ## Build stage
 FROM $NODE_IMAGE as build-stage
