--- a/documentation-portal/Dockerfile
+++ b/documentation-portal/Dockerfile
@@ -41,6 +41,5 @@ EXPOSE $PORT
 ## unhealthy status is reached if `retries` number of consecutive failures,
 ## but failures does not count within `start-period` seconds of start.
 HEALTHCHECK --start-period=10s --timeout=2s --interval=10s --retries=2 CMD \
-    curl --fail --silent --show-error --max-time 1 \
-    "http://localhost:$PORT/" \
+    wget -q -T 1 -O - "http://localhost:$PORT/" \
     > /dev/null || exit 1
